crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__dollar_followed_by_dollar.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"$$$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
    (
        Token(
            "$",
        ),
        2..3,
    ),
]
