crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__double_dollar_cmd_space.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"$$ cmd$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
    (
        Token(
            "cmd",
        ),
        3..6,
    ),
    (
        Token(
            "$",
        ),
        6..7,
    ),
]
