crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__double_dollar_no_space.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(\"$$failed\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
    (
        Token(
            "failed",
        ),
        2..8,
    ),
]
