crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-10.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"true or false and true and true or false\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Or(
                            (
                                Or(
                                    (
                                        Boolean(
                                            (
                                                true,
                                                0..4,
                                            ),
                                        ),
                                        0..4,
                                    ),
                                    (
                                        "or",
                                        5..7,
                                    ),
                                    (
                                        And(
                                            (
                                                And(
                                                    (
                                                        Boolean(
                                                            (
                                                                false,
                                                                8..13,
                                                            ),
                                                        ),
                                                        8..13,
                                                    ),
                                                    (
                                                        "and",
                                                        14..17,
                                                    ),
                                                    (
                                                        Boolean(
                                                            (
                                                                true,
                                                                18..22,
                                                            ),
                                                        ),
                                                        18..22,
                                                    ),
                                                ),
                                                8..22,
                                            ),
                                            (
                                                "and",
                                                23..26,
                                            ),
                                            (
                                                Boolean(
                                                    (
                                                        true,
                                                        27..31,
                                                    ),
                                                ),
                                                27..31,
                                            ),
                                        ),
                                        8..31,
                                    ),
                                ),
                                0..31,
                            ),
                            (
                                "or",
                                32..34,
                            ),
                            (
                                Boolean(
                                    (
                                        false,
                                        35..40,
                                    ),
                                ),
                                35..40,
                            ),
                        ),
                        0..40,
                    ),
                ),
                0..40,
            ),
        ),
        0..40,
    ),
]
